Ajustes de projeto

--- a/app/Discipulado/app/src/main/AndroidManifest.xml
+++ b/app/Discipulado/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.bodruk.discipulado">
+    package="br.com.bodruk">
 
     <!-- Include required permissions for Google Mobile Ads to run. -->
     <uses-permission android:name="android.permission.INTERNET" />
