--- a/app/Discipulado/app/build.gradle
+++ b/app/Discipulado/app/build.gradle
@@ -4,11 +4,11 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
-        applicationId "br.com.bodruk.discipulado"
+        applicationId "br.com.bodruk"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 3
-        versionName "0.3"
+        versionCode 5
+        versionName "2.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -26,5 +26,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.google.android.gms:play-services-ads:10.2.6'
+    compile 'com.google.firebase:firebase-core:9.6.1'
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
